// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Time renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 dNylIv"
        disabled={true}
        placeholder=" "
        type="time"
        value="Text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 hzeVtM"
        disabled={true}
        placeholder=" "
        type="time"
        value="Text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 jjNFvC"
          disabled={true}
          placeholder=" "
          type="time"
          value="Text"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 iCmZWh"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jpqMLI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 dhJEZS"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jpqMLI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 gUQLUI"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jpqMLI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 dNylIv"
        placeholder=" "
        readOnly={true}
        type="time"
        value="Read only text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 hzeVtM"
        placeholder=" "
        readOnly={true}
        type="time"
        value="Read only text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 jjNFvC"
          placeholder=" "
          readOnly={true}
          type="time"
          value="Read only text"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 dNylIv"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 hzeVtM"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 jjNFvC"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 dNylIv"
        placeholder="Placeholder"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 hzeVtM"
        placeholder="Placeholder"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 jjNFvC"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 huNSLc"
        dir="rtl"
        placeholder="Placeholder"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
        dir="rtl"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 jYttaj"
        dir="rtl"
        placeholder="Placeholder"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 bkVUwJ"
          dir="rtl"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="LabelInner-vrrjt0-0 jmYFGi"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <input
        className="Input-qkdgvx-0 dNylIv"
        placeholder="medium"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <input
        className="Input-qkdgvx-0 hzeVtM"
        placeholder="large"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 jasrmP"
          placeholder="xlarge"
          type="time"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 lalKEM"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 cORvlv"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 kEpyYM"
      >
        <input
          className="Input-qkdgvx-0 jjNFvC"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
